--- a/src/components/Bookshelf/Bookshelf.css
+++ b/src/components/Bookshelf/Bookshelf.css
@@ -4,7 +4,7 @@
 
     display: flex;
     flex-direction: column;
-    padding: 5vw 0;
+    padding: 1rem 0;
 }
 .heading {
     font-family: 'Roboto Condensed', sans-serif;
@@ -17,7 +17,7 @@
 .books {
     display: flex;
     justify-content: space-between;
-    
+    padding: 1rem 0;
 }
 
 @media only screen and (max-width: 768px) {
