--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -20,25 +20,20 @@
 	background-image: url(./images/bg.jpg);
 	background-position: center;
 	background-size: cover;
-
-	display: grid;
-	grid-template-columns: 3rem 1fr 3rem;
-	align-items: center;
 }
 
 .main__content {
-    grid-column: 2 / 3;
-    text-align: center;
     color: #fff;
+    padding: 10vh 5vw 0 5vw;
 }
 
-h1 {
+.main__content p {
     margin-bottom: 3rem;
-    font-size: 5rem;
+    font-size: 2rem;
     font-weight: 300;
 }
 
-.swoosh, h1 {
+.swoosh, .main__content p {
 	color: #fff;
 	animation: swoosh .5s ease-in .5s;
     animation-fill-mode: backwards;
